--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
+        <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <link rel="stylesheet" href="css/leaflet-measure.css">
         <style>
@@ -23,7 +23,7 @@
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script><script src="js/L.Control.Locate.min.js"></script>
+        <script src="js/leaflet.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
         <script src="js/leaflet-hash.js"></script>
@@ -51,12 +51,11 @@
             }
         }
         var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:8
-        }).fitBounds([[-1.1480001887189615,116.75722690632342],[-0.836371619019045,117.32955993467685]]);
+            zoomControl:true, maxZoom:28, minZoom:9
+        }).fitBounds([[-1.1457882197954745,116.75915188407316],[-0.8364971731609724,117.32710597863712]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        L.control.locate({locateOptions: {maxZoom: 19}}).addTo(map);
         var measureControl = new L.Control.Measure({
             position: 'topleft',
             primaryLengthUnit: 'meters',
@@ -78,7 +77,7 @@
             pane: 'pane_sattelite_0',
             opacity: 1.0,
             attribution: '',
-            minZoom: 8,
+            minZoom: 9,
             maxZoom: 28,
             minNativeZoom: 0,
             maxNativeZoom: 18
@@ -191,7 +190,7 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(0,231,223,1.0)',
+                fillColor: 'rgba(0,255,221,1.0)',
                 interactive: true,
             }
         }
@@ -302,7 +301,7 @@
             return {
                 pane: 'pane_Jalan_samboja_2',
                 opacity: 1,
-                color: 'rgba(13,5,8,1.0)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
@@ -325,6 +324,8 @@
         });
         bounds_group.addLayer(layer_Jalan_samboja_2);
         map.addLayer(layer_Jalan_samboja_2);
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/Jalan_samboja_2.png" /> Jalan_samboja': layer_Jalan_samboja_2,'<img src="legend/Area_Samboja_1.png" /> Area_Samboja': layer_Area_Samboja_1,"sattelite": layer_sattelite_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
